fix(tag): Improve position on small screens

--- a/assets/scss/_components/_tag.scss
+++ b/assets/scss/_components/_tag.scss
@@ -7,8 +7,8 @@
 /// -----------------------------------------------------------------------------
 @include block(tag) {
 	position: relative;
-	top: 1px;
-	left: -3px;
+	top: 5px;
+	left: -1px;
 	vertical-align: text-top;
 	padding: 5px 10px;
 	border-radius: 11px;
